httpapi: update openapi spec
